@@ -1,74 +1,79 @@
 grammar Tequila
 
   rule program
-    space configuration:configuration_line* expression space {
+    allow_space configuration:configuration_line* expression allow_space {
       def eval(binding)
         tree = Tequila::Tree.new
-	configuration.elements.each {|cl| cl.eval(tree)}
-	expression.eval(tree, tree.root, binding)
+        configuration.elements.each {|cl| cl.eval(tree)}
+        expression.eval(tree, tree.root, binding)
       end
     }
   end
 
   rule configuration_line
-    space '#!' key:term space value:term? {
+    allow_space '#!' key:term allow_space value:term? {
       def eval(tree)
         if value.text_value.blank?
           tree.config.send(key.text_value.intern)
-	else
-	  tree.config.send(key.text_value.intern, value.text_value)
-	end
+        else
+          tree.config.send(key.text_value.intern, value.text_value)
+        end
       end
     }
   end
 
   rule expression
-    '-' var_type:('@'/'@@'/'$')? object {
+    source_keyword var_type:('@'/'@@'/'$')? object {
       def eval(tree, parent, binding)
         object.eval(tree, parent, binding, :variable, {:var_type => var_type.text_value})
       end
     }
   end
 
+  rule source_keyword
+   '-' allow_space
+   / 'source' must_space
+  end
+
   rule object
-    term suppress_label:'~'? label:( space '=>' space term)? atd:attributes_decl? mtd:methods_decl? std:statics_decl? cbd:code_decl* asd:association_decl* gld:gluing_decl* eob {
+    data_mark? object_name:term suppress_label:'~'? label:label_decl? atd:attributes_decl? mtd:methods_decl? std:statics_decl? cbd:code_decl* asd:association_decl* gld:gluing_decl* eob {
 
       def name
-        elements[0].text_value
+        object_name.text_value
       end
 
       def eval(tree, parent, binding, type, params ={})
 
-	node = Tequila::Node.new((:variable == type) ? params[:var_type] + name : name, type).eval(binding)
+        node = Tequila::Node.new((:variable == type) ? params[:var_type] + name : name, type).eval(binding)
 
-	unless suppress_label.empty?
-	  node.suppress_label = true
-	end
+        unless suppress_label.empty?
+          node.suppress_label = true
+        end
 
-	if label.elements
-	  node.label = label.term.text_value
-	end
+        if label.elements
+          node.label = label.term.text_value
+        end
 
-	if atd.elements
+        if atd.elements
           atd.update_node(node)
-	end
+        end
 
-	if std.elements
-	  std.update_node(node)
-	end
+        if std.elements
+          std.update_node(node)
+        end
 
-	if mtd.elements
+        if mtd.elements
           mtd.update_node(node)
-	end
+        end
 
-	if cbd.elements
-	  cbd.elements.each {|cb| cb.update_node(node)}
-	end
+        if cbd.elements
+          cbd.elements.each {|cb| cb.update_node(node)}
+        end
 
         tree.add_child_to(parent, node)
 
-	asd.elements.each {|e| e.eval(tree, node, binding) }
-	gld.elements.each {|e| e.eval(tree, node, binding) }
+        asd.elements.each {|e| e.eval(tree, node, binding) }
+        gld.elements.each {|e| e.eval(tree, node, binding) }
 
         tree
       end
@@ -76,7 +81,7 @@ grammar Tequila
   end
 
   rule association_decl
-    space '+' object {
+    allow_space ('+' allow_space /'join' must_space) object {
       def eval(tree, node, binding)
         object.eval(tree, node, binding, :association)
       end
@@ -84,7 +89,7 @@ grammar Tequila
   end
 
   rule gluing_decl
-    space '<' object {
+    allow_space ('<' allow_space /'merge' must_space) object {
       def eval(tree, node, binding)
         object.eval(tree, node, binding, :bounded)
       end
@@ -92,7 +97,7 @@ grammar Tequila
   end
 
   rule attributes_decl
-    space ':' (only_attributes_decl / except_attributes_decl) {
+    allow_space ':'? (only_attributes_decl / except_attributes_decl) {
       def update_node(node)
         elements[2].update_node(node)
       end
@@ -100,56 +105,79 @@ grammar Tequila
   end
 
   rule only_attributes_decl
-    'only' atd:(only_attribute_decl)+ {
+    (allow_space atd:pick_all_decl+
+    / ('only'/'pick') atd:only_attribute_decl+) {
       def update_node(node)
-        atd.elements.each {|x| x.update_node(node, :only)}
+        if atd.elements
+          atd.elements.each {|x| x.update_node(node, :only)}
+        end
       end
     }
   end
 
   rule except_attributes_decl
-    'except' atd:(except_attribute_decl)+ {
+    (allow_space atd:drop_all_decl+
+    / ('except'/'drop') atd:except_attribute_decl+) {
       def update_node(node)
-        atd.elements.each {|x| x.update_node(node, :except)}
+        if atd.elements
+          atd.elements.each {|x| x.update_node(node, :except)}
+        end
       end
     }
   end
 
+  rule pick_all_decl
+   'pick' must_space 'all' {
+     def update_node(node, _)
+       node.all_attributes!
+     end
+   }
+  end
+
+  rule drop_all_decl
+   'drop' must_space 'all' {
+     def update_node(node, _)
+       node.no_attributes!
+     end
+   }
+  end
+
+
   rule only_attribute_decl
-    space '.' term label:( space '=>' space term)? {
+    allow_space '.' term label:label_decl? {
       def update_node(node, key)
         m = Tequila::Node::Attribute.new(term.text_value)
-	if label.elements
+        if label.elements
           m.label = label.term.text_value
-	end
-	node.add_attribute(key, m)
+        end
+        node.add_attribute(key, m)
       end
     }
   end
 
   rule except_attribute_decl
-    space '.' term {
+    allow_space '.' term {
       def update_node(node, key)
         m = Tequila::Node::Attribute.new(term.text_value)
-	node.add_attribute(key, m)
+        node.add_attribute(key, m)
       end
     }
   end
 
   rule attribute_decl
-    space '.' term label:( space '=>' space term)? {
+    allow_space '.' term label:label_decl? {
       def update_node(node, key)
         m = Tequila::Node::Attribute.new(term.text_value)
-	if label.elements
+        if label.elements
           m.label = label.term.text_value
-	end
-	node.add_attribute(key, m)
+        end
+        node.add_attribute(key, m)
       end
     }
   end
 
   rule methods_decl
-    space ':methods' mtd:(method_decl)+ {
+    allow_space ':'? 'methods' mtd:(method_decl)+ {
       def update_node(node)
         mtd.elements.each {|x| x.update_node(node)}
       end
@@ -157,18 +185,18 @@ grammar Tequila
   end
 
   rule method_decl
-    space '.' term params:('(' space first_param:(!(','/')') .)+ space rest_params:(',' space param:(!(','/')') .)+ space)* ')')? label:( space '=>' space term)? {
+    allow_space '.' term params:('(' allow_space first_param:(!(','/')') .)+ allow_space rest_params:(',' allow_space param:(!(','/')') .)+ allow_space)* ')')? label:label_decl? {
       def update_node(node)
         m = Tequila::Node::Method.new(term.text_value)
 
-	if params.elements
-	  m.params = parameters
-	end
+        if params.elements
+          m.params = parameters
+        end
 
-	if label.elements
+        if label.elements
           m.label = label.term.text_value
-	end
-	node.methods += [m]
+        end
+        node.methods += [m]
       end
 
       def parameters
@@ -179,7 +207,7 @@ grammar Tequila
   end
 
   rule statics_decl
-    space ':static' std:(static_decl)+ {
+    allow_space ':'? 'static' std:(static_decl)+ {
       def update_node(node)
         std.elements.each {|x| x.update_node(node)}
       end
@@ -187,19 +215,23 @@ grammar Tequila
   end
 
   rule static_decl
-    space label:term space '=>' space stv:term {
+    allow_space label:term label_decl {
       def update_node(node)
-        node.statics += [Tequila::Node::Static.new(label.text_value, stv.text_value)]
+        node.statics += [Tequila::Node::Static.new(label.text_value, label_decl.term.text_value)]
       end
     }
   end
 
   rule code_decl
-    space ':code' label:( space '=>' space term) code:(!eob . )* code_end {
+    allow_space ':'? 'code' label_decl code:(!eob . )* code_end {
       def update_node(node)
-        node.code_blocks += [Tequila::Node::CodeBlock.new(label.term.text_value, code.text_value)]
+        node.code_blocks += [Tequila::Node::CodeBlock.new(label_decl.term.text_value, code.text_value)]
       end
     }
+  end
+
+  rule label_decl
+    allow_space ('=>'/'label') allow_space data_mark? term
   end
 
   rule code_end
@@ -207,17 +239,28 @@ grammar Tequila
   end
 
   rule eob #end of block
-    space 'end'
+    allow_space 'end'
   end
 
   rule term
     [a-zA-Z0-9_\?\!]+
   end
 
-  rule space
-    [ \n]*
+  rule must_space
+    white_space+
   end
 
+  rule allow_space
+    white_space*
+  end
+
+  rule white_space
+    [ \n]
+  end
+
+  rule data_mark
+    "'"
+  end
 end
 
 
